--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
-
-
   <link rel="stylesheet" href="CSS/styles.css" />
 
 </head>
@@ -25,77 +23,89 @@
 
   <!-- NAVBAR -->
    <header class="navbar">
-       <a href="#top" class="logo-link">
-        <img src="Images/png/logo.png" alt="Logo Guido Scotti" class="logo"/>
+       <a href="#top" class="logo">
+        Guido<span class="logodev">.dev</span>
        </a>
       <nav class="nav-links">
         <a href="#top">Home</a>
         <a href="#about">About</a>
         <a href="#techstack">TechStack</a>
         <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="#contacto">Contact</a>
       </nav>
    </header>
 
-   <!-- HOME -->
+<!-- SIDEBAR-->
+<aside class="sidebar">
+  <div class="icon-left">
+      <a href="https://www.linkedin.com/in/guidoscotti/" target="_blank"> 
+          <img src="/Images/png/linkedin.png" alt="linkedin" width="50"/>
+      </a>
+      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=scottigui@gmail.com" target="_blank"> 
+          <img src="/Images/png/mail.png" alt="mail" width="32"/>
+      </a>
+      <a href="https://github.com/guido-scotti" target="_blank"> 
+          <img src="/Images/png/github.png" alt="github" width="38"/>
+      </a>
+    </div>
+</aside>
+
+<!-- HOME -->
    <section id="top" class="hero">
-    <div class="hero-overlay">
-      <h2>Hola,</h2>
-      <h2>Mi nombre es</h2>
-      <div class="hero-nombre">
-        <h1>Guido Scotti</h1>
-      </div>
-      <h1>Diseño cosas web!</h1>
+    <div>
+      <h2>Hola, soy</h2>
+      <span class="hero-nombre">
+        Guido Scotti
+      </span>
+      <h1>Soy desarrollador web!</h1>
     </div>
   </section>
 
   <!-- ABOUT US -->
   <section id="about" class="nosotros-section">
-    <h1> SOBRE NOSOTROS </h1>
-    <h3>Una experiencia con sabor y vista al río</h3>
-    <p>En el corazón del Puerto de Frutos, El Guapo del Puerto combina la tradición de la parrilla argentina con una vista inigualable al río. 
-      Terraza, deck de madera, salones vidriados y ambientación cálida hacen de cada comida un momento único.</p>
-
+    <h1> ABOUT ME </h1>
+    <h3>Passionate about coding, design, and continuous learning.</h3>
+    <p>I’m Guido Scotti, a web developer and programming student from Buenos Aires, Argentina.  
+       I enjoy creating clean and functional projects, combining creativity with problem-solving skills.  
+       Beyond coding, I’m passionate about sports, music, and design, which inspire me to bring fresh ideas into my work.  
+       I consider myself organized, responsible, and always eager to take on new challenges.</p>
   </section>
 
 <!-- TECH STACK -->
 <section id="techstack" class="menu-section">
   <h1>Tech Stack</h1>
-
   <h2>Tecnologias en las que estoy trabajando...</h2>
-
 </section>
 
 
-  <!-- PROJECTS -->
+<!-- PROJECTS -->
 <section id="projects" class="reseñas-section">
   <h1>Mis proyectos!</h1>
-
   <h2>Mis cositas</h2>
-
 </section>
 
 
-<!-- MAPS E INSTAGRAM -->
+<!-- CONTACTO -->
 <section id="contacto" class="contacto">
-
     <h2>CONTACTAME!</h2>
-
     <div class="iconos-contacto">
-      <a href="https://www.google.com/maps/dir/?api=1&destination=El+Guapo+Del+Puerto,+Puerto+de+Frutos,+Tigre" target="_blank">
-        <img src="Images/Iconos/iconomaps.png" alt="Maps" width="36">
+      <a href="https://www.linkedin.com/in/guidoscotti/" target="_blank"> 
+          <img src="/Images/png/linkedin.png" alt="linkedin" width="50"/>
       </a>
-      <a href="https://wa.me/5491157991442?text=Hola!%20Quiero%20más%20información%20sobre%20sus%20servicios!%20Gracias!" target="_blank">
-        <img src="Images/Iconos/wppicono.png" alt="Whatsapp" width="38">
-      </a>
-      <a href="https://www.instagram.com/elguapo.delpuerto" target="_blank">
-        <img src="Images/Iconos/iconoig.png" alt="Instagram" width="32">
-      </a>
-      
-    </div>
 
+      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=scottigui@gmail.com" target="_blank"> 
+          <img src="/Images/png/mail.png" alt="mail" width="32"/>
+      </a>
+
+      <a href="https://github.com/guido-scotti" target="_blank"> 
+          <img src="/Images/png/github.png" alt="github" width="38"/>
+      </a>
+    </div>
 </section> 
 
+<div class="borde"></div>
+
+<!-- DERECHOS -->
 <section id="derechos" class="derechos">
   <footer>
     <p>&copy; 2025 <span class="resaltado">Guido Scotti.</span> Todos los derechos reservados.</p>
