updating home and pngs

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 <aside class="sidebar">
   <div class="icon-left">
       <a href="https://www.linkedin.com/in/guidoscotti/" target="_blank"> 
-          <img src="/Images/png/linkedin.png" alt="linkedin" width="50"/>
+          <img src="/Images/png/linkedinblanco.png" alt="linkedin" width="38"/>
       </a>
       <a href="https://mail.google.com/mail/?view=cm&fs=1&to=scottigui@gmail.com" target="_blank"> 
-          <img src="/Images/png/mail.png" alt="mail" width="32"/>
+          <img src="/Images/png/mailblanco.png" alt="mail" width="34"/>
       </a>
       <a href="https://github.com/guido-scotti" target="_blank"> 
-          <img src="/Images/png/github.png" alt="github" width="38"/>
+          <img src="/Images/png/githubblanco.png" alt="github" width="30"/>
       </a>
     </div>
 </aside>
@@ -53,16 +53,16 @@
 <!-- HOME -->
    <section id="top" class="hero">
     <div>
-      <h2>Hola, soy</h2>
+      <h2>Hi, i'm</h2>
       <span class="hero-nombre">
         Guido Scotti
       </span>
-      <h1>Soy desarrollador web!</h1>
+      <h1>On my way to be a front-end web developer! </></h1>
     </div>
   </section>
 
   <!-- ABOUT US -->
-  <section id="about" class="nosotros-section">
+  <section id="about" class="about-section">
     <h1> ABOUT ME </h1>
     <h3>Passionate about coding, design, and continuous learning.</h3>
     <p>I’m Guido Scotti, a web developer and programming student from Buenos Aires, Argentina.  
@@ -72,33 +72,33 @@
   </section>
 
 <!-- TECH STACK -->
-<section id="techstack" class="menu-section">
-  <h1>Tech Stack</h1>
-  <h2>Tecnologias en las que estoy trabajando...</h2>
+<section id="techstack" class="tech-section">
+  <h1>TECH STACK</h1>
+  <h2>Technologies i'm working on currently...</h2>
 </section>
 
 
 <!-- PROJECTS -->
-<section id="projects" class="reseñas-section">
-  <h1>Mis proyectos!</h1>
-  <h2>Mis cositas</h2>
+<section id="projects" class="projects-section">
+  <h1>MY PROJECTS!</h1>
+  <h2>Stuff...</h2>
 </section>
 
 
 <!-- CONTACTO -->
 <section id="contacto" class="contacto">
-    <h2>CONTACTAME!</h2>
+    <h2>REACH ME!</h2>
     <div class="iconos-contacto">
       <a href="https://www.linkedin.com/in/guidoscotti/" target="_blank"> 
-          <img src="/Images/png/linkedin.png" alt="linkedin" width="50"/>
+          <img src="/Images/png/linkedinblanco.png" alt="linkedin" width="38"/>
       </a>
 
       <a href="https://mail.google.com/mail/?view=cm&fs=1&to=scottigui@gmail.com" target="_blank"> 
-          <img src="/Images/png/mail.png" alt="mail" width="32"/>
+          <img src="/Images/png/mailblanco.png" alt="mail" width="34"/>
       </a>
 
       <a href="https://github.com/guido-scotti" target="_blank"> 
-          <img src="/Images/png/github.png" alt="github" width="38"/>
+          <img src="/Images/png/githubblanco.png" alt="github" width="30"/>
       </a>
     </div>
 </section> 
@@ -108,7 +108,7 @@
 <!-- DERECHOS -->
 <section id="derechos" class="derechos">
   <footer>
-    <p>&copy; 2025 <span class="resaltado">Guido Scotti.</span> Todos los derechos reservados.</p>
+    <p>&copy; 2025 <span class="resaltado">Guido Scotti.</span> All rights reserved.</p>
   </footer>
 </section>
 
