updating home, adding resume

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Guido Scotti">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Guido Scotti</title>
-  <link rel="icon" href="Images/Iconos/guapologo.png" type="image/png">
+  <link rel="icon" href="/Images/png/gslogo.png" type="image/png">
 
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -57,7 +57,10 @@
       <span class="hero-nombre">
         Guido Scotti
       </span>
-      <h1>On my way to be a front-end web developer! </></h1>
+      <h1>On my way to be a front-end web developer!</h1>
+      <div class="hero-resume">
+        <a href="https://drive.google.com/file/d/15nNc72CuaIzjEnrRxFGTa8KS7aTeyx1R/view?usp=sharing" target="_blank">RESUME</a>
+      </div>
     </div>
   </section>
 
@@ -65,10 +68,12 @@
   <section id="about" class="about-section">
     <h1> ABOUT ME </h1>
     <h3>Passionate about coding, design, and continuous learning.</h3>
-    <p>I’m Guido Scotti, a web developer and programming student from Buenos Aires, Argentina.  
-       I enjoy creating clean and functional projects, combining creativity with problem-solving skills.  
-       Beyond coding, I’m passionate about sports, music, and design, which inspire me to bring fresh ideas into my work.  
-       I consider myself organized, responsible, and always eager to take on new challenges.</p>
+    <p>I’m Guido Scotti, a <span>web developer</span> and <span>programming student</span> from Buenos Aires, Argentina. Since July 2024, 
+      I’ve been working as a Teaching Assistant for Programming 1 at the National Technological University (UTN), 
+      where I help students learn the fundamentals of programming with C++. I enjoy creating clean and functional projects, 
+      combining creativity with problem-solving skills. Beyond coding, I’m passionate about sports like rugby, 
+      as well as music and design, which inspire me to bring fresh and original ideas into my work. 
+      I consider myself organized, responsible, and always eager to take on new challenges.</p>
   </section>
 
 <!-- TECH STACK -->
