adding my pic and fixing bugs

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <nav class="nav-links">
         <a href="#top">Home</a>
         <a href="#about">About</a>
-        <a href="#techstack">TechStack</a>
+        <a href="#techstack">Training</a>
         <a href="#projects">Projects</a>
         <a href="#contacto">Contact</a>
       </nav>
@@ -52,15 +52,22 @@
 
 <!-- HOME -->
    <section id="top" class="hero">
+
+    <!-- COLUMNA IZQUIERDA -->
     <div>
       <h2>Hi, i'm</h2>
       <span class="hero-nombre">
         Guido Scotti
       </span>
-      <h1>On my way to be a front-end web developer!</h1>
+      <h1>I'm a front-end web developer!</h1>
       <div class="hero-resume">
         <a href="https://drive.google.com/file/d/1ft-GiM3iEcreAM0UisqHtX5zwUVm019Q/view?usp=sharing" target="_blank">RESUME</a>
       </div>
+    </div>
+
+    <!-- COLUMNA DERECHA -->
+    <div class="hero-foto">
+      <img src="/Images/pics/fotoguido.jpg" alt="Guido Scotti">
     </div>
   </section>
 
@@ -78,7 +85,7 @@
 
 <!-- TECH STACK -->
 <section id="techstack" class="tech-section">
-  <h1>TECH STACK</h1>
+  <h1>TRAINING</h1>
   <h2>Technologies i'm working on currently...</h2>
 </section>
 
