--- a/index.html
+++ b/index.html
@@ -86,7 +86,56 @@
 <!-- TECH STACK -->
 <section id="techstack" class="tech-section">
   <h1>TRAINING</h1>
-  <h2>Technologies i'm working on currently...</h2>
+  <h2>My whole stack!</h2>
+
+  <div class="tech-container">
+
+      <div class="tech-box-group">
+        <h3 class="tech-texto">BACK-END</h3>
+          <div class="tech-box">
+            <div class="tech-logos">
+              <img src="/Images/png/c++.png" alt="c++"/>
+              <img src="/Images/png/c.png" alt="c#"/>
+              <img src="/Images/png/java.png" alt="java"/>
+              <img src="/Images/png/sql.png" alt="sql"/>
+              <img src="/Images/png/asp.png" alt="asp"/>
+            </div>
+          </div>
+      </div>
+
+      <div class="tech-box-group">
+        <h3 class="tech-texto">FRONT-END</h3>
+          <div class="tech-box">
+            <div class="tech-logos">
+              <img src="/Images/png/html.png" alt="html5"/>
+              <img src="/Images/png/css.png" alt="css3"/>
+              <img src="/Images/png/javascript.png" alt="javascript"/>
+              <img src="/Images/png/sfml.png" alt="sfml"/>
+            </div>
+          </div>
+      </div>
+
+      <div class="tech-box-group">
+        <h3 class="tech-texto">TOOLS</h3>
+          <div class="tech-box">
+            <div class="tech-logos">
+              <img src="/Images/png/github.png" alt="git"/>
+              <img src="/Images/png/githubblanco.png" alt="github"/>
+              <img src="/Images/png/vscode.png" alt="vscode"/>
+              <img src="/Images/png/vs.png" alt="visualstudio"/>
+              <img src="/Images/png/codeblocks.png" alt="codeblocks"/>
+          </div>  
+        </div>
+      </div>
+
+  </div>
+    
+  <div class="academic">
+    <h2>Academic background</h2>
+    <p>Technical degree in programming (in process)</p>
+    <p>Responsive web design, freeCodeCamp.</p>
+    <p>JavaScript Algorithms & Data Structures, freeCodeCamp.</p>
+  </div>
 </section>
 
 
