fixing stack logos

--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
   <h1>TRAINING</h1>
   <h2>My whole stack!</h2>
 
+  <h3 class="tech-texto">BACK-END</h3>
   <div class="tech-container">
-
       <div class="tech-box-group">
-        <h3 class="tech-texto">BACK-END</h3>
           <div class="tech-box">
             <div class="tech-logos">
               <img src="/Images/png/c++.png" alt="c++"/>
@@ -102,11 +101,13 @@
             </div>
           </div>
       </div>
+  </div>
 
+  <h3 class="tech-texto">FRONT-END</h3>
+   <div class="tech-container">
       <div class="tech-box-group">
-        <h3 class="tech-texto">FRONT-END</h3>
           <div class="tech-box">
-            <div class="tech-logos">
+            <div class="tech-logos-front">
               <img src="/Images/png/html.png" alt="html5"/>
               <img src="/Images/png/css.png" alt="css3"/>
               <img src="/Images/png/javascript.png" alt="javascript"/>
@@ -114,9 +115,11 @@
             </div>
           </div>
       </div>
+    </div>
 
+    <h3 class="tech-texto">TOOLS</h3>
+    <div class="tech-container">
       <div class="tech-box-group">
-        <h3 class="tech-texto">TOOLS</h3>
           <div class="tech-box">
             <div class="tech-logos">
               <img src="/Images/png/github.png" alt="git"/>
@@ -127,8 +130,7 @@
           </div>  
         </div>
       </div>
-
-  </div>
+    </div>
     
   <div class="academic">
     <h2>Academic background</h2>
