adding preview image

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <!-- COLUMNA DERECHA -->
     <div class="hero-foto">
-      <img src="/Images/pics/fotoguido.jpg" alt="Guido Scotti">
+      <img src="/Images/others/fotoguido.jpg" alt="Guido Scotti">
     </div>
   </section>
 
