--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
       <div class="tech-box-group">
           <div class="tech-box">
             <div class="tech-logos">
-              <img src="/Images/png/c++.png" alt="c++"/>
-              <img src="/Images/png/c.png" alt="c#"/>
-              <img src="/Images/png/java.png" alt="java"/>
-              <img src="/Images/png/sql.png" alt="sql"/>
-              <img src="/Images/png/asp.png" alt="asp"/>
+              <img src="/Images/png/c++.png" class="logo-c" width="55" alt="c++"/>
+              <img src="/Images/png/c.png" class="logo-csharp" width="55" alt="c#"/>
+              <img src="/Images/png/java.png" class="logo-java" width="65" alt="java"/>
+              <img src="/Images/png/sql.png" class="logo-sql" width="65" alt="sql"/>
+              <img src="/Images/png/asp.png" class="logo-asp" width="65" alt="asp"/>
             </div>
           </div>
       </div>
@@ -108,10 +108,10 @@
       <div class="tech-box-group">
           <div class="tech-box">
             <div class="tech-logos-front">
-              <img src="/Images/png/html.png" alt="html5"/>
-              <img src="/Images/png/css.png" alt="css3"/>
-              <img src="/Images/png/javascript.png" alt="javascript"/>
-              <img src="/Images/png/sfml.png" alt="sfml"/>
+              <img src="/Images/png/html.png" class="logo-html" width="75" alt="html5"/>
+              <img src="/Images/png/css.png" class="logo-css" width="55" alt="css3"/>
+              <img src="/Images/png/javascript.png" class="logo-js" width="57" alt="javascript"/>
+              <img src="/Images/png/sfml.png" class="logo-sfml" width="65" alt="sfml"/>
             </div>
           </div>
       </div>
@@ -122,11 +122,11 @@
       <div class="tech-box-group">
           <div class="tech-box">
             <div class="tech-logos">
-              <img src="/Images/png/github.png" alt="git"/>
-              <img src="/Images/png/githubblanco.png" alt="github"/>
-              <img src="/Images/png/vscode.png" alt="vscode"/>
-              <img src="/Images/png/vs.png" alt="visualstudio"/>
-              <img src="/Images/png/codeblocks.png" alt="codeblocks"/>
+              <img src="/Images/png/github.png" class="logo-git" width="60" alt="git"/>
+              <img src="/Images/png/githubblanco.png" class="logo-github" width="60" alt="github"/>
+              <img src="/Images/png/vscode.png" class="logo-vscode" width="50" alt="vscode"/>
+              <img src="/Images/png/vs.png" class="logo-vs" width="85" alt="visualstudio"/>
+              <img src="/Images/png/codeblocks.png" class="logo-codeblocks" width="55" alt="codeblocks"/>
           </div>  
         </div>
       </div>
