--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
         <div class="borde-proyecto"></div>
         <h3 data-en="PLANTAS VS PROFES" data-es="PLANTAS VS PROFES">PLANTAS VS PROFES</h3>
         <p data-en="A tower defense console game parodying Plants vs Zombies, where university professors replace the zombies. 
-                  Built in <span class='color-c'>C++</span> with SFML for graphics, sound, and music." 
+                  Built in <span class='color-c'>C++</span> with <span class='color-sfml'>SFML</span> for graphics, sound, and music." 
            data-es="Juego de consola estilo tower defense, parodia de Plants vs Zombies, donde los profesores de la facultad 
-                  reemplazan a los zombies. Hecho en <span class='color-c'>C++</span> y SFML para gráficos, sonidos y música.">
+                  reemplazan a los zombies. Hecho en <span class='color-c'>C++</span> y <span class='color-sfml'>SFML</span> para gráficos, sonidos y música.">
            A tower defense console game parodying Plants vs Zombies, where university professors replace the zombies. 
            Built in <span class="color-c">C++</span> with <span class="color-sfml">SFML</span> for graphics, sound, and music.
         </p>
@@ -321,7 +321,7 @@
       <div class="project-info">
         <div class="borde-proyecto"></div>
         <h3 data-en="RR-SCD MED" data-es="RR-SCD MED">RR-SCD MED</h3>
-        <p data-en="A clinic management system built with C#, ASP.NET, <span class='color-html'>HTML</span>, <span class='color-css'>CSS</span>, and SQL Server. 
+        <p data-en="A clinic management system built with <span class='color-csharp'>C#</span>, <span class='color-asp'>ASP.NET</span>, <span class='color-html'>HTML</span>, <span class='color-css'>CSS</span>, and <span class='color-sql'>SQL Server</span>. 
                   It allows admin users to manage doctors and patients (CRUD), while doctors can view and manage their appointments." 
            data-es="Sistema de gestión de clínica desarrollado con <span class='color-csharp'>C#</span>, <span class='color-asp'>ASP.NET</span>, <span class='color-html'>HTML</span>, <span class='color-css'>CSS</span> y <span class='color-sql'>SQL Server</span>. Permite a los administradores 
                   gestionar médicos y pacientes (ABML), y a los médicos ver y modificar sus turnos.">
