--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="CSS/styles.css" />
+  <link rel="stylesheet" href="CSS/responsivestyles.css" />
 
 </head>
 
@@ -32,7 +33,10 @@
         <a href="#techstack" data-en="Training" data-es="Formación">Training</a>
         <a href="#projects" data-en="Projects" data-es="Proyectos">Projects</a>
         <a href="#contacto" data-en="Contact" data-es="Contacto">Contact</a>
-        <img src="Images/png/language.png" id="lang-toggle" alt="lang" width="34">
+        <div class="lang-group">
+        <a href="#" class="lang-btn" data-lang="en">EN</a>
+        <a href="#" class="lang-btn" data-lang="es">ES</a>
+        </div>
       </nav>
    </header>
 
